--- a/coding/src/main/webapp/WEB-INF/web.xml
+++ b/coding/src/main/webapp/WEB-INF/web.xml
@@ -64,7 +64,7 @@
     <welcome-file-list>
         <welcome-file>index.htm</welcome-file>
         <welcome-file>index.html</welcome-file>
-        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>userIndex.jsp</welcome-file>
         <welcome-file>index.jspx</welcome-file>
     </welcome-file-list>
 </web-app>
